# crosssocket

./: .gitignore  CMakeLists.txt  README.md  crosssocket-config.cmake
include/: crosssocket.h
src/: crosssocket.c
test/: CMakeLists.txt  xs_test.c
